# craftmicro-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  README.md  library.properties
docs/: Doxyfile  _app_8h_source.html  _bitmap_8h_source.html  _border_8h_source.html  _borders_8h_source.html  _box_8h_source.html  _bump_filter_8h_source.html  _clip_rect_8h_source.html  _color565_8h_source.html  _color8888_8h_source.html  _color_8h_source.html  _color_mask_filter_8h_source.html  _common_8h_source.html  _craft_micro_8h.html  _craft_micro_8h_source.html  _display_8h_source.html  _display_i_l_i9341_8h_source.html  _display_i_l_i9488_8h_source.html  _display_list_8h_source.html  _display_object_8h_source.html  _display_r_m67162_8h_source.html  _display_s_p_i_8h_source.html  _display_s_t7789_8h_source.html  _easing_8h_source.html  _filter_8h_source.html  _fixed_point_math_8h_source.html  _font_8h_source.html  _fuzzy_color_mask_filter_8h_source.html  _glyph_info_8h_source.html  _gradient_8h_source.html  _gui_app_8h_source.html  _h_s_v_filter_8h_source.html  _i_drawable_8h_source.html  _input_8h_source.html  _light_8h_source.html  _line_8h_source.html  _line_buffer_8h_source.html  _line_buffer_data_8h_source.html  _linear_gradient_8h_source.html  _linked_list_8h_source.html  (+281 more)
examples/: Displays.md  README.md  TFT_eSPI_display.h
fonts/: MartelExtraBold10.h  MartelExtraBold11.h  MartelExtraBold12.h  MartelExtraBold14.h  MartelExtraBold16.h  MartelExtraBold18.h  MartelExtraBold20.h  OpenSans10.h  (+32 more)
test/: catch.hpp  meson.build
test/utils/: FixedPointMath.cpp
(+133 files in other folders)
